changed it to correctly make files